# backend/controllers/result_controller.go
@@ -26,6 +26,8 @@ func NewResultController(teamService services.TeamService, resultService service
 // @Param seasonId path string true "Season ID" default(2)
 // @Param teamId path string true "Team ID" default(4)
 // @Success 200 {object} responses.ResultsResponse
+// @Failure 400 {object} responses.BadRequestResponse
+// @Failure 422 {object} responses.UnprocessableEntityResponse
 // @Router /seasons/{seasonId}/teams/{teamId}/results [get]
 func (c *ResultController) GetAllResults(ctx *gin.Context) {
 	seasonID, err := utils.GetParamUint(ctx, "seasonId")
@@ -58,6 +60,7 @@ func (c *ResultController) GetAllResults(ctx *gin.Context) {
 // @Param teamId path string true "Team ID" default(4)
 // @Param resultId path string true "Result ID" default(2)
 // @Success 200 {object} responses.ResultResponse
+// @Failure 400 {object} responses.BadRequestResponse
 // @Failure 404 {object} responses.NotFoundResponse
 // @Router /seasons/{seasonId}/teams/{teamId}/results/{resultId} [get]
 func (c *ResultController) GetResult(ctx *gin.Context) {
@@ -98,6 +101,8 @@ func (c *ResultController) GetResult(ctx *gin.Context) {
 // @Param result body models.CreateResultDto true "Result object that needs to be created"
 // @Success 201 {object} responses.ResultResponse
 // @Failure 400 {object} responses.BadRequestResponse
+// @Failure 401 {object} responses.UnauthorizedResponse
+// @Failure 404 {object} responses.NotFoundResponse
 // @Failure 422 {object} responses.UnprocessableEntityResponse
 // @Router /seasons/{seasonId}/teams/{teamId}/results [post]
 func (c *ResultController) CreateResult(ctx *gin.Context) {
@@ -167,7 +172,10 @@ func (c *ResultController) CreateResult(ctx *gin.Context) {
 // @Param result body models.UpdateResultDto true "Result object that needs to be updated"
 // @Success 200 {object} responses.ResultResponse
 // @Failure 400 {object} responses.BadRequestResponse
+// @Failure 401 {object} responses.UnauthorizedResponse
+// @Failure 403 {object} responses.ForbiddenResponse
 // @Failure 404 {object} responses.NotFoundResponse
+// @Failure 422 {object} responses.UnprocessableEntityResponse
 // @Router /seasons/{seasonId}/teams/{teamId}/results/{resultId} [patch]
 func (c *ResultController) UpdateResult(ctx *gin.Context) {
 	seasonID, err := utils.GetParamUint(ctx, "seasonId")
@@ -234,7 +242,11 @@ func (c *ResultController) UpdateResult(ctx *gin.Context) {
 // @Param teamId path string true "Team ID" default(3)
 // @Param resultId path string true "Result ID" default(1)
 // @Success 204
+// @Failure 400 {object} responses.BadRequestResponse
+// @Failure 401 {object} responses.UnauthorizedResponse
+// @Failure 403 {object} responses.ForbiddenResponse
 // @Failure 404 {object} responses.NotFoundResponse
+// @Failure 422 {object} responses.UnprocessableEntityResponse
 // @Router /seasons/{seasonId}/teams/{teamId}/results/{resultId} [delete]
 func (c *ResultController) DeleteResult(ctx *gin.Context) {
 	seasonID, err := utils.GetParamUint(ctx, "seasonId")
